# zhpan

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
configs/: demo.yaml  v0.1.yaml  v0.2.yaml  v0.3.yaml
data/gold/: README.md
data/prompts/: README.md  _demo_note.txt  demo.jsonl  v0.2.jsonl  v0.3.jsonl
docs/: ROADMAP.md  blog_post_zhihu.md  methodology.md  zhihu_publish_guide.md
examples/: debias_in_3_lines.py
experiments/: EXPERIMENTS.md
leaderboard/demo/: calibrator.json  results.json
leaderboard/v0.1/: calibrator.json  results.json
leaderboard/v0.2/: calibrator.json  results.json
leaderboard/v0.3/: anchor_compare.json  calibrator.json  category_bias.json  category_bias_kimi.json  results.json  subjectivity_anchor_robust.json  subjectivity_correlation.json  subjectivity_correlation_kimi.json
src/zhpan/: __init__.py  calibrate.py  cli.py  compute_bias.py  generate.py  judge.py  models.py  prompts.py  utils.py
src/zhpan/scripts/: analyze.py  anchor_compare.py  build_alignbench.py  build_prompts.py  per_category_bias.py  plot_anchor_compare.py  plot_anchor_subj_robust.py  plot_heatmap.py  plot_per_category.py  run_generate.py  run_judge.py  subjectivity_correlation.py  verify_keys.py
tests/: __init__.py  test_basic.py
