[project]
name = "zhpan"
version = "0.1.0"
description = "Debias Chinese LLM-as-a-Judge in 3 lines. 中评：中文场景大模型裁判偏差校正工具。"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Daiqinguo" }]
requires-python = ">=3.11"
keywords = ["llm", "judge", "bias", "calibration", "chinese", "evaluation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Natural Language :: Chinese (Simplified)",
]

dependencies = [
    "httpx>=0.27.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.8.0",
    "tqdm>=4.66.0",
    "tenacity>=9.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/USERNAME/zhpan"
Issues = "https://github.com/USERNAME/zhpan/issues"

[project.scripts]
zhpan = "zhpan.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zhpan"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
